<resources>
    <string name="app_name">TestApplication</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="result">Результат: </string>
    <string name="test">Тестируемая дата: </string>
    <string name="time">Время</string>
    <string name="date">Дата</string>
    <string name="check">Проверить</string>
    <string name="set_data">Выбрать дату и время</string>
</resources>